@@ -1,3 +1,6 @@
+  06 Jan 2013; Manuel Rüger <gentoo@rueg.eu> blockenspiel-0.4.5.ebuild:
+  dev-ruby/blockenspiel: Drop unused (R)DEPEND
+
 *blockenspiel-0.4.5 (06 Jan 2013)
 
   06 Jan 2013; Manuel Rüger <gentoo@rueg.eu> +blockenspiel-0.4.5.ebuild,
